--- a/src/components/ToDoItem/ToDoItem.module.css
+++ b/src/components/ToDoItem/ToDoItem.module.css
@@ -37,6 +37,7 @@
   right: 3rem;
   top: 30%;
   cursor: pointer;
+  z-index: 4;
 }
 
 .task_edit{
@@ -52,9 +53,12 @@
     opacity: 0;
     position: absolute;
     overflow: hidden;
-    cursor: pointer;
-   
+    cursor: pointer;  
+    width: 10px;
+    max-width: 10px;
+    width: 10px;
 }
+
 
 .task_img{
   width: 1.2rem;
@@ -65,6 +69,23 @@
   right: 8rem;
   top: 20%;
   cursor: pointer;
+}
+
+.task_time{
+  font-size: 8px;
+  margin-left: 2rem;
+  color:dimgrey;
+  display: inline-block;
+  vertical-align: middle;
+  position: absolute;
+  right: 8rem;
+  letter-spacing: 0.08rem;
+  top: 30%;
+}
+
+.task_time_title{
+  font-size: 9px;
+ 
 }
 
 .task_img_full{
